fixing spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,6 @@ body{
 #instructions{
     background: white;
     color: #33353a;
-    /*width: 1050px;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;*/
 }
 
 #winsandlosses{
@@ -72,5 +68,16 @@ p{
     margin-right: 30px;
 }
 
+@media only screen and (max-width: 640px) {
+    img{
+    width: 75%;
+    }
+}
+
+@media only screen and (min-width: 641px) and (max-width: 768px) {
+    img{
+        width: 85%;
+    }
+}
 
 
